ACS 7.0 support